--- a/project.html
+++ b/project.html
@@ -32,7 +32,7 @@
                 <button class="btn-white">Contact</button>
 
             </div>
-            <img class="banner-profile-pic" src="../my_portfolio_website/styles/images/hardy.png" alt="">
+            <img class="banner-profile-pic" src="/styles/images/hardy.png" alt="">
 
         </div>
        
